--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "drizzle-orm": "^0.33.0",
+    "fireworks-js": "^2.10.8",
     "geist": "^1.3.0",
+    "lucide-react": "^0.474.0",
     "next": "^15.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
