--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.474.0",
     "next": "^15.0.1",
+    "package.json": "^2.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
